--- a/.github/workflows/social.yml
+++ b/.github/workflows/social.yml
@@ -1,8 +1,8 @@
 name: Social Readme
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
+#  schedule:
+#    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
