--- a/.github/workflows/fork_star.yml
+++ b/.github/workflows/fork_star.yml
@@ -5,8 +5,8 @@ on:
   watch:
     types:
       - started
-  schedule:
-    - cron: '0 0 * * *'
+#  schedule:
+#    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
