--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Snake Contrib
 
 on:
   schedule:
-    - cron: "0 */8 * * *" 
+    - cron: "1 * * * *" 
   
   # allows to manually run the job at any time
   workflow_dispatch:
