--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Snake Contrib
+name: generate animation
 
 on:
   # run automatically every 24 hours
@@ -11,8 +11,10 @@ on:
   # run on every push on the master branch
   push:
     branches:
-      - main
+    - master
     
+  
+
 jobs:
   generate:
     permissions: 
@@ -34,9 +36,9 @@ jobs:
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+        uses: xwlops/ghaction-github-pages@v3.1.0
         with:
-          target_branch: snake
+          target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
